Added The ability for a user to register and login with a user name and password + added a front end for the api (not complete yet)
